# compa

./: .gitignore  AUTHORS  HACKING  Makefile.am  README  README.md  autogen.sh  compa.spec.in  configure.ac  example.html
lang/: .gitignore  Makefile.am  compa.pot  fr.po
src/: .cvsignore  .gitignore  Makefile.am  compa.glade  main.c  org.mate.panel.applet.compa.gschema.xml.in  org.mate.panel.applet.compaFactory.service.in  org.mate.panel.compa.mate-panel-applet.in
